In transit to database of dish items

--- a/app/src/main/res/layout/activity_dish_details.xml
+++ b/app/src/main/res/layout/activity_dish_details.xml
@@ -14,7 +14,7 @@
         <ImageView
             android:id="@+id/dish_image"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="80dp"
             android:src="@mipmap/ic_launcher_round"
             />
 
